--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
 
   <div class="w-full h-screen bg-black font-['Gilroy']">
-    <div class="imgcontainer relative w-full h-screen">
-      <div class="maincard w-full z-[3] absolute h-screen">
+    <div class="imgcontainer relative w-full h-screen overflow-hidden">
+      <div class="maincard w-[130%] z-[3] absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 h-[130%]">
         <img class="w-full h-full object-cover"
           src=""
           alt="">
       </div>
-      <div class="incomingcard z-[2] w-full absolute h-screen ">
+      <div class="incomingcard z-[2] w-[130%] absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 h-[130%] ">
         <img class="w-full h-full object-cover" src="" alt="">
       </div>
     </div>
@@ -46,25 +46,25 @@
       </div>
       <div class="detailscontainer w-full ">
         <div class="details px-5 py-6 w-full">
-          <div class="location flex gap-4">
+          <div class="ee location flex gap-4">
             <i
               class="w-[1.6rem] h-[1.6rem] bg-white flex items-center justify-center rounded-full font-semibold ri-corner-left-up-fill"></i>
             <h3 class="text-white">USA,california</h3>
           </div>
 
-          <div class="name flex gap-5 text-white mt-1">
+          <div class="ee name flex gap-5 text-white mt-1">
             <h1 class="font-regular tracking-tighter text-7xl"></h1>
-            <h1 class="font-regular tracking-tighter text-7xl opacity-30"></h1>
+            <h2 class="font-regular tracking-tighter text-7xl opacity-30"></h1>
           </div>
 
-          <div class="tags flex gap-3 text-white mt-4">
+          <div class="ee tags flex gap-3 text-white mt-4">
 
           </div>
-          <div class="bio text-white/80 mt-5">
-            <h3 class="text-xl"></h3>
+          <div class="ee bio text-white/80 mt-5">
+            <h3 class="text-xl">Bio</h3>
             <p class="text-lg mt-3"></p>
           </div>
-          <div class="flex items-start mt-10 gap-1">
+          <div class="ee flex items-start mt-10 gap-1">
             <button class="deny py-3 rounded-xl w-1/2 bg-white">
               <i class="text-3xl font-semibold ri-close-line"></i>
             </button>
@@ -78,13 +78,9 @@
   </div>
 
 
+  //https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 
-
-
-
-
-
-
+  //"https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
